# SPITS

./: index.html  pyproject.toml  requirements.txt
spits/: __init__.py  index.html  index0.html  spits.py
