[tool.poetry]
name = "spits"
version = "0.1.17"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
toml = "^0.10.2"
requests = "^2.31.0"
fridagram = {version = "^0.1.13", source = "etec"}

[tool.poetry.scripts]
spits = "spits.spits:start"


[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
