[tool.poetry]
name = "spits"
version = "0.2.1"
description = ""
authors = ["dermatty <stephan@untergrabner.at>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
toml = "^0.10.2"
requests = "^2.31.0"

[tool.poetry.scripts]
spits = "spits.spits:start"


[[tool.poetry.source]]
name = "etec"
url = "http://etec.iv.at:8123"
default = false
secondary = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
